tests/type_errors/wrong_arity.sy
def main
: Int -> Int
: a = f ' a

def f
: Int -> Int -> Int
: a b = a + b

-- TODO: Not sure I like the extra lines at the end, maybe shrink the spans whitespace?

--+ expected exit status: 7
--+ expected stderr:
--+ > Failed to merge types.
--+ 
--+ Int
--+ ----
--+ Int -> ([Num] => Int)
--+ 
--+   1| def main
--+   2| : Int -> Int
--+   3| : a = f ' a
--+   4| 
--+   5| def f

